Bug 39897 - [4.5 Regression] Revision 146761 caused libgomp.fortran/omp_atomic1.f90
Summary: [4.5 Regression] Revision 146761 caused libgomp.fortran/omp_atomic1.f90
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
: 39910 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-25 14:48 UTC by H.J. Lu
Modified: 2009-04-28 22:16 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-04-25 14:48:38 UTC
Revision 146762 caused:

Executing on host: /export/build/gnu/gcc/build-x86_64-linux/gcc/xgcc -B/export/build/gnu/gcc/build-x86_64-linux/gcc/ /export/gnu/import/gcc/libgomp/testsuite/libgomp.fortran/omp_atomic1.f90  -B/export/build/gnu/gcc/build-x86_64-linux/x86_64-unknown-linux-gnu/32/libgomp/ -I/export/build/gnu/gcc/build-x86_64-linux/x86_64-unknown-linux-gnu/32/libgomp -I/export/gnu/import/gcc/libgomp/testsuite/.. -march=i486 -fmessage-length=0 -fopenmp  -O1   -B/export/build/gnu/gcc/build-x86_64-linux/x86_64-unknown-linux-gnu/32/libgomp/../libgfortran/.libs   -L/export/build/gnu/gcc/build-x86_64-linux/x86_64-unknown-linux-gnu/32/libgomp/.libs -lgomp -L/export/build/gnu/gcc/build-x86_64-linux/x86_64-unknown-linux-gnu/32/libgomp/../libgfortran/.libs -lgfortranbegin -lgfortran -lm   -m32 -o ./omp_atomic1.exe    (timeout = 300)
/tmp/ccCCtX3d.s: Assembler messages:^M
/tmp/ccCCtX3d.s:95: Error: suffix or operands invalid for `fisubr'^M
/tmp/ccCCtX3d.s:145: Error: suffix or operands invalid for `fisub'^M
/tmp/ccCCtX3d.s:174: Error: suffix or operands invalid for `fisub'^M
compiler exited with status 1
Comment 1 Dominique d'Humieres 2009-04-25 15:52:18 UTC
> Revision 146762 caused:

You probably mean 146761:

Author:	uros
Date:	Sat Apr 25 08:10:51 2009 UTC (7 hours, 40 minutes ago)
Log Message:	
	PR target/39590
	* configure.ac (HAVE_AS_IX86_FILDQ): On x86 targets check whether
	the configured assembler supports fildq and fistpq mnemonics.
	(HAVE_AS_IX86_FILDS): Rename from HAVE_GAS_FILDS_FISTS.
	* configure: Regenerated.
	* config.in: Ditto.

	* config/i386/i386.c (print_operand): Handle 'Z'.
	['z']: Remove handling of special fild/fist suffixes.
	(output_fix_trunc): Use '%Z' to output suffix of fist{,p,tp} insn.
	* config/i386/i386.md (*floathi<mode>2_i387): Use '%Z' to output
	suffix of fild insn.
	(*floatsi<mode>2_vector_mixed): Ditto.
	(*float<SSEMODEI24:mode><MODEF:mode>2_mixed_interunit): Ditto.
	(*float<SSEMODEI24:mode><MODEF:mode>2_mixed_nointerunit): Ditto.
	(*float<SSEMODEI24:mode><X87MODEF:mode>2_i387_with_temp): Ditto.
	(*float<SSEMODEI24:mode><X87MODEF:mode>2_i387): Ditto.
	* config/i386/gas.h (GAS_MNEMONICS): Remove.


Comment 2 uros 2009-04-25 20:11:15 UTC
Subject: Bug 39897

Author: uros
Date: Sat Apr 25 20:11:01 2009
New Revision: 146784

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=146784
Log:
	PR target/39897
	* config/i386/i386.c (print_operand) ['z']: Revert handling of
	HImode operands.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/i386/i386.c

Comment 3 H.J. Lu 2009-04-26 15:37:15 UTC
*** Bug 39910 has been marked as a duplicate of this bug. ***
Comment 4 Uroš Bizjak 2009-04-28 22:16:59 UTC
Fixed.