	PR target/39897 	* config/i386/i386.c (print_operand) ['z']: Revert handling of 	HImode operands.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@146784 138bc75d-0d04-0410-961f-82ee72b054a4